# pyochain

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  LICENSE.md  README.md  RELEASE_NOTES_0.6.1.1.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrefly.toml  ruff.toml  search.json  sitemap.xml  t.md  t.py  test_pattern_matching.py  zensical.toml
.github/workflows/: build-on-master.yml  copilot-setup-steps.yml  docs.yml  publish.yml  test.yml
api-reference/: index.html
benchmarks/: __init__.py  __main__.py  _pipeline.py  _registery.py  benchs.py
core-types-overview/: index.html
docs/: api-reference.md  core-types-overview.md  examples.md  getting-started.md  index.md  interoperability.md  overview.md  user-guide.md
docs/guides/: chaining.md  index.md  replacing-loops.md
docs/javascripts/: mermaid.mjs
docs/reference/: baseconcreteset.md  checkable.md  deque.md  dict.md  err.md  fluent.md  inspect.md  into.md  iter.md  none.md  noneoption.md  null.md  ok.md  option.md  optiontype.md  optionunwraperror.md  peekable.md  pipe.md  pipeable.md  position.md  pyocollection.md  pyocontainer.md  pyoitemsview.md  pyoiterable.md  pyoiterator.md  pyokeysview.md  pyomapping.md  pyomappingview.md  pyomutablemapping.md  pyomutablesequence.md  pyomutableset.md  pyoreversible.md  pyosequence.md  pyoset.md  pyosized.md  pyovaluesview.md  range.md  result.md  resulttype.md  resultunwraperror.md  (+13 more)
examples/: index.html
getting-started/: index.html
guides/: index.html
guides/chaining/: index.html
interoperability/: index.html
overview/: index.html
reference/baseconcreteset/: index.html
reference/checkable/: index.html
reference/deque/: index.html
reference/dict/: index.html
reference/err/: index.html
reference/fluent/: index.html
reference/inspect/: index.html
reference/into/: index.html
reference/iter/: index.html
reference/none/: index.html
reference/noneoption/: index.html
reference/null/: index.html
reference/ok/: index.html
reference/option/: index.html
reference/optiontype/: index.html
reference/optionunwraperror/: index.html
reference/peekable/: index.html
reference/pipe/: index.html
reference/pipeable/: index.html
reference/position/: index.html
reference/pyocollection/: index.html
reference/pyocontainer/: index.html
reference/pyoitemsview/: index.html
reference/pyoiterable/: index.html
reference/pyoiterator/: index.html
reference/pyokeysview/: index.html
reference/pyomapping/: index.html
reference/pyomappingview/: index.html
reference/pyomutablemapping/: index.html
reference/pyomutablesequence/: index.html
reference/pyomutableset/: index.html
reference/pyoreversible/: index.html
reference/pyosequence/: index.html
reference/pyoset/: index.html
reference/pyosized/: index.html
reference/pyovaluesview/: index.html
reference/range/: index.html
reference/result/: index.html
reference/resulttype/: index.html
reference/resultunwraperror/: index.html
reference/seq/: index.html
reference/set/: index.html
reference/setmut/: index.html
reference/sliceview/: index.html
reference/some/: index.html
reference/stableset/: index.html
reference/tap/: index.html
reference/traits/: index.html
reference/unzipped/: index.html
reference/vec/: index.html
reference/wrapper/: index.html
rust/: Cargo.toml
rust/src/: abc.rs  args.rs  converters.rs  hasher.rs  lib.rs  mixins.rs  option.rs  pyitertools.rs  pylibs.rs  result.rs  seq.rs  tools.rs  types.rs
scripts/: README.md  __init__.py  _utils.py  bench_option.py  bench_option_current_vs_third.py  benchmarks.py  benchs.py  check_docstrings.py  check_fn_rust.py  check_nav.py  fix_autorefs.py  generate_docs.py  rebuild-docs.ps1  star_bench.py  starbench.md
scripts/data/: Dict_fns.ndjson  Iter_fns.ndjson  iter_fn_sources.ndjson
search/: search_index.json
src/pyochain/: __init__.py  _abc.pyi  _core.py  _dict.py  _eager.py  _iter.py  _lazy.py  _option.py  _peekable.py  _range.py  _result.py  _seq.py  _set.py  _sliceview.py  _tools.pyi  _types.py  _utils.py  _vec.py  _views.py  rs.pyi  test_abc.py  traits.py
src/pyochain/_core/: __init__.py  _config.py  _depreciation.py  _format.py  _main.py
src/pyochain/_dict/: __init__.py  _exprs.py  _filters.py  _groups.py  _iter.py  _joins.py  _main.py  _maps.py  _nested.py  _process.py
src/pyochain/_iter/: __init__.py  _aggregations.py  _booleans.py  _common.py  _dicts.py  _eager.py  _filters.py  _joins.py  _lazy.py  _lists.py  _main.py  _maps.py  _partitions.py  _process.py  _rolling.py  _tuples.py
src/pyochain/_results/: __init__.py  _option.py  _result.py  _states.py
src/pyochain/abc/: __init__.py  _collection.py  _iterable.py  _iterator.py  _iterator.pyi  _mappings.py  _sequences.py  _set.py
tests/: __init__.py  _performance.py  main.py  performance.py  test_abc.py  test_all_equal.py  test_concatenate_unsafe.py  test_filter_star.py  test_hash.py  test_last_count.py  test_last_length.py  test_option.py  test_parity.py  test_range.py  test_result.py  test_sliceview.py  test_slots.py  test_typing.py  test_vec.py  tests.py
tests/benchmarks/: README.md  _utils.py  test_all_unique.py  test_collections.py  test_filter_star.py  test_iter.py  test_last_count.py  test_last_length.py  test_mixins.py  test_option.py  test_result.py  test_sequences.py  test_sliding_window.py  test_try_reducers.py  test_unique.py  test_vec.py
type_approaches/: README.md  __init__.py  _first.py  _option.py  _result.py  _second.py
user-guide/: index.html
(+7 files in other folders)
