[project]
    description     = "Method chaining for iterables and dictionaries in Python."
    name            = "pyochain"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.19.0"

    dependencies = []

    classifiers = ["License :: OSI Approved :: MIT License"]


[dependency-groups]
    dev = [
        "basedpyright>=1.38.2",
        "mkdocstrings-python>=1.18.2",
        "polars>=1.33.1",
        "pydoclint>=0.8.1",
        "pytest-benchmark>=5.2.3",
        "pytest-cov>=7.0.0",
        "pytest-doctest-mkdocstrings>=0.1.1",
        "pytest-stubtester",
        "pytest>=9.0.2",
        "rich>=14.2.0",
        "ruff>=0.14.9",
        "sdsort>=0.5.0",
        "toml>=0.10.2",
        "typer>=0.21.1",
        "zensical>=0.0.42",
    ]
[tool.ruff]
    lint.external = ["DOC"]
    lint.ignore = [
        "C417",
        "COM812",
        "COM812",
        "CPY001",
        "D401",
        "E501",
        "FIX002",
        "FIX004",
        "PLC0415",
        "PLR0904",
        "PLR2004",
        "PYI021",
        "S101",
        "S608",
        "SLF001",
        "T201",
        "TC003",
        "TC006",
        "TD002",
        "TD003",
        "TID252",
    ]

    lint.preview = true
    lint.select  = ["ALL"]
    [tool.ruff.format]
        docstring-code-format = true
    [tool.ruff.lint.pydocstyle]
        convention = "google"
    [tool.ruff.lint.per-file-ignores]
        "t.py"    = ["ANN201", "D100", "D101", "D102", "D103"]
        "tests/*" = ["D100", "D101", "D102", "D103", "D104", "DTZ001", "FBT001"]
[tool.pydoclint]
    arg-type-hints-in-docstring                   = true
    arg-type-hints-in-signature                   = true
    check-class-attributes                        = true
    check-raises                                  = true
    check-return-types                            = true
    check-yield                                   = true
    require-arg-section                           = true
    require-return-section                        = true
    require-return-section-when-returning-nothing = false
    skip-checking-short-docstrings                = true
    style                                         = "google"

[tool.uv.sources]
    pytest-stubtester = { git = "https://github.com/OutSquareCapital/pytest-stubtester.git" }

[build-system]
    build-backend = "maturin"
    requires      = ["maturin>=1.8,<2.0"]

[tool.maturin]
    manifest-path = "rust/Cargo.toml"
    module-name   = "pyochain.rs"
    python-source = "src"
[tool.basedpyright]
    reportImportCycles     = false
    reportMissingSuperCall = false
    typeCheckingMode       = "all"
[tool.pyrefly]
    preset = "strict"
[tool.pytest.ini_options]
    addopts   = "--doctest-modules --doctest-glob=*.md --stubs --doctest-mdcodeblocks --benchmark-skip"
    testpaths = ["README.md", "docs", "src/pyochain", "tests"]
