[project]
    description     = "Method chaining for iterables and dictionaries in Python."
    name            = "pyochain"
    readme          = "README.md"
    requires-python = ">=3.13"
    version         = "0.23.1"

    dependencies = []

    classifiers = ["License :: OSI Approved :: MIT License"]


[dependency-groups]
    dev = [
        "basedpyright>=1.38.2",
        "maturin>=1.13.3",
        "mkdocstrings-python>=1.18.2",
        "pydoclint>=0.8.1",
        "pytest-benchmark>=5.2.3",
        "pytest-cov>=7.0.0",
        "pytest-doctest-mkdocstrings>=0.1.1",
        "pytest-markdown-docs>=0.9.2",
        "pytest-stubtester",
        "pytest>=9.0.2",
        "rich>=14.2.0",
        "ruff>=0.14.9",
        "sdsort>=0.5.0",
        "toml>=0.10.2",
        "zensical>=0.0.42",
    ]
[tool.pydoclint]
    arg-type-hints-in-docstring                   = true
    arg-type-hints-in-signature                   = true
    check-class-attributes                        = true
    check-raises                                  = true
    check-return-types                            = true
    check-yield                                   = true
    require-arg-section                           = true
    require-return-section                        = true
    require-return-section-when-returning-nothing = false
    skip-checking-short-docstrings                = true
    style                                         = "google"

[tool.uv.sources]
    pytest-stubtester = { git = "https://github.com/OutSquareCapital/pytest-stubtester.git" }

[build-system]
    build-backend = "maturin"
    requires      = ["maturin>=1.8,<2.0"]

[tool.maturin]
    manifest-path = "rust/Cargo.toml"
    module-name   = "pyochain.rs"
    python-source = "src"
[tool.basedpyright]
    reportImportCycles     = false
    reportMissingSuperCall = false
    typeCheckingMode       = "all"
[tool.pyrefly]
    preset      = "strict"
    search-path = [".", "src"]
[tool.pytest.ini_options]
    addopts   = "--doctest-modules --markdown-docs --stubs --benchmark-skip"
    testpaths = ["README.md", "docs", "src/pyochain", "tests"]
