[package]
    edition = "2024"
    license = "MIT"
    name    = "rs"
    version = "0.1.0"

[lib]
    crate-type = ["cdylib"]
    name       = "rs"

[dependencies]
    pyderive = "0.9"
    pyo3 = { version = ">=0.28", features = [
        "extension-module",
        "multiple-pymethods",
    ] }
[profile.release]
    codegen-units = 1
    lto           = true
    opt-level     = 3
